@@ -361,6 +361,14 @@ static void parse_args(int argc, char **_Nonnull argv, struct RURI_CONTAINER *_N
 				ruri_error("{red}hidepid should be in range 0-2\n");
 			}
 		}
+		// OOM score.
+		else if (strcmp(argv[index], "-O") == 0 || strcmp(argv[index], "--oom-score-adj") == 0) {
+			index++;
+			container->oom_score_adj = atoi(argv[index]);
+			if (container->oom_score_adj < -1000 || container->oom_score_adj > 1000) {
+				ruri_error("{red}oom_score_adj should be in range [-1000]-[1000]\n");
+			}
+		}
 		// Join ns.
 		else if (strcmp(argv[index], "-J") == 0 || strcmp(argv[index], "--join-ns") == 0) {
 			index++;
@@ -957,6 +965,17 @@ static void parse_args(int argc, char **_Nonnull argv, struct RURI_CONTAINER *_N
 						container->hidepid = atoi(argv[index]);
 						if (container->hidepid < 0 || container->hidepid > 2) {
 							ruri_error("{red}hidepid should be in range 0-2\n");
+						}
+					} else {
+						ruri_error("Invalid argument %s\n", argv[index]);
+					}
+					break;
+				case 'O':
+					if (i == (strlen(argv[index]) - 1)) {
+						index++;
+						container->oom_score_adj = atoi(argv[index]);
+						if (container->oom_score_adj < -1000 || container->oom_score_adj > 1000) {
+							ruri_error("{red}oom_score_adj should be in range [-1000]-[1000]\n");
 						}
 					} else {
 						ruri_error("Invalid argument %s\n", argv[index]);
