@@ -3,6 +3,7 @@
   * Fix built-in seccomp profile.
   * Add `-X` option: `--deny-syscall`.
   * Add `-J` option: `--join-ns`.
+  * Add `-O` option: `--oom-score-adj`.
 # v3.8:
   * Support more platforms, currently supports: arm64, armv7, armhf, riscv64, i386, loong64, s390x, ppc64le and x86_64.
   * Improve rootless container support.
